Se agregan los archivos y se suben a github

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,10 @@
 *.exe
 *.out
 *.app
+
+#Archivos de proteus
+.workspace
+.pdsbak
+
+# Datos de redes y token del bot
+Codigos-Arduino/BotTelegram-Medidor-Capacitores-ArduinoESP32/Token_Users_Wifi.h
